fix useless whitespace for only-icon button + delete useless css (old homepage)

--- a/css/scss/objects/_blocks.scss
+++ b/css/scss/objects/_blocks.scss
@@ -84,13 +84,3 @@
 	    margin: 0.5em 0;
 	}
 }
-
-.element-type-content-link {
-    .btn-block > img {
-       width: 100%;
-       display: block;
-       height: auto;
-       z-index: 1;
-
-   }
-}
