--- a/css/scss/objects/_buttons.scss
+++ b/css/scss/objects/_buttons.scss
@@ -1,10 +1,6 @@
 /*------------------------------------*\
     $BUTTONS
 \*------------------------------------*/
-a.btn {
-    text-decoration: none;
-}
-
 input[type=submit].btn, button.btn, a.btn, .btn {
     font-size: $font-size-small-2;
     font-family: $font;
@@ -37,10 +33,10 @@ input[type=submit].btn, button.btn, a.btn, .btn {
         font-weight: normal;
     }
 
-    &:after {
+    &:not(.only-icon):after {
         margin-left: 0.25rem;
     }
-    &:before {
+    &:not(.only-icon):before {
         margin-right: 0.25rem;
     }
 
@@ -51,67 +47,6 @@ input[type=submit].btn, button.btn, a.btn, .btn {
     &.disabled {
         background: $gray-light-2;
         color: $gray;
-        }
-
-    &.btn-icon {
-        position: relative;
-
-        & .text {
-            display: inline;
-            margin: 0 1rem 0 0;
-        }
-    }
-}
-
-.btn-small {
-    padding: $pad-half;
-}
-
-.btn-large {
-    padding: $pad-half;
-    text-transform: uppercase;
-    background: $gray;
-    font-size: 1.4rem;
-    font-weight: normal;
-}
-
-.text-btn {
-    font-style: italic;
-}
-
-// keolis
-.btn {
-    &.btn-social {
-        display: inline-block;
-        vertical-align: middle;
-        line-height: 3em;
-        background: none;
-        padding: 0;
-        width: 100%;
-        &:hover {
-            @include opacity(0.6);
-        }
-    }
-}
-
-// btn
-.btn-block {
-    display: block;
-    overflow: hidden;
-    position: relative;
-    text-decoration: none;
-}
-
-.btn-style2 {
-    .icon-arrow-right {
-        background-position: -389px -312px;
-    }
-}
-
-.btn-icon {
-    &.btn-style1,
-    &.btn-style2 {
-        border-radius: 0.25em;
-        padding: 0.45em 0.65em;
+        cursor: default;
     }
 }
